--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.0-beta.2",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/tailwind": "^5.1.1",
+    "@iconify-json/mdi": "^1.2.0",
+    "astro": "^5.0.0-beta.2",
+    "astro-icon": "^1.1.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   }
 }
