--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hurrellt-portfolio-next",
   "type": "module",
   "version": "0.0.1",
+  "author": {
+    "name": "Tomas Hurrell",
+    "email": "hurrelltomas@gmail.com"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
